Bug 339576: [Modern theme] No arrows at end of scrollbars Assumptions were broken by a recent change. Drop assumptions for an explicit mapping. r=josh, sr=Neil